--- a/src/components/CustomButton/CustomButton.scss
+++ b/src/components/CustomButton/CustomButton.scss
@@ -13,18 +13,32 @@
   font-weight: bolder;
   border: none;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &:hover {
     background-color: white;
     color: black;
     border: 1px solid black;
   }
-  &.google-sign-in{
+  &.google-sign-in {
     background-color: #4285f4;
     color: white;
 
-    &:hover{
+    &:hover {
       background-color: #357ae8;
+      border: none;
+    }
+  }
+
+  &.inverted {
+    background-color: black;
+    color: wheat;
+    border: 1px solid black;
+    &:hover {
+      background-color: wheat;
+      color: black;
       border: none;
     }
   }
