--- a/src/components/CartDropDown/CartDroupDown.scss
+++ b/src/components/CartDropDown/CartDroupDown.scss
@@ -21,5 +21,12 @@
     button {
       margin-top: auto;
     }
+
+    .empty-message{
+      font-size: 18px;
+      font-weight: bold;
+      text-align: center;
+      margin: 50px auto;
+    }
   }
   
